[package]
name = "bloodrush_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
keyvalues-parser = "0.2.0"
reqwest = { version = "0.11.24", features = ["stream", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
windows-core = "0.52.0"


[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System",
    "Win32",
    "Win32_Security",
    "Win32_System_Threading"
]
